--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "tomahawk-plugin-redis",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A Tomahawk plugin to impletem a Key Value Pair Store backed by Redis",
   "main": "lib/store.js",
+  "bin": {
+    "kv-store-plugin": "./bin/redis-plugin"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
